--- a/.gitconfig
+++ b/.gitconfig
@@ -42,3 +42,6 @@
 # http://rentzsch.tumblr.com/post/564806957/public-but-hackable-git-submodules
 [url "git@github.com:paulirish/"]
   insteadOf = "git://github.com/paulirish/"
+[user]
+	name = jozsefDevs
+	email = jozsefDevs@users.noreply.github.com
