--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,15 @@
 [submodule ".vim/bundle/vim-soy"]
 	path = .vim/bundle/vim-soy
 	url = https://github.com/duganchen/vim-soy
+[submodule ".vim/bundle/snipmate.vim"]
+	path = .vim/bundle/snipmate.vim
+	url = https://github.com/caike/snipmate.vim.git
+[submodule ".vim/bundle/ag.vim"]
+	path = .vim/bundle/ag.vim
+	url = https://github.com/epmatsw/ag.vim
+[submodule ".vim/bundle/gundo.vim"]
+	path = .vim/bundle/gundo.vim
+	url = http://github.com/sjl/gundo.vim.git
+[submodule ".vim/bundle/vim-startify"]
+	path = .vim/bundle/vim-startify
+	url = https://github.com/mhinz/vim-startify
