--- a/.jshintrc
+++ b/.jshintrc
@@ -58,4 +58,5 @@
     "sub"           : false,  // Tolerate all forms of subscript notation besides dot notation e.g. `dict['key']` instead of `dict.key`.
     "trailing"      : true,   // Prohibit trailing whitespaces.
     "white"         : false    // Check against strict whitespace rules.
+    "quotmark"      : "double"    // Check against "" or '' for strings
 }
